// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesCatalog correctly renders default markup 1`] = `
<section
  className="catalog"
>
  <h2
    className="catalog__title visually-hidden"
  >
    Catalog
  </h2>
  <ul
    className="catalog__genres-list"
  >
    <li
      className="catalog__genres-item catalog__genres-item--active"
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        All Genres
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Action
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Crime
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Comedy
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Fantasy
      </a>
    </li>
  </ul>
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/1"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/midnight-special.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Midnight Special
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/2"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Pulp Fiction
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/3"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/bronson.jpg"
            preload="none"
            src="http://media.xiph.org/mango/tears_of_steel_1080p.webm"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Bronson
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-4"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/4"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/what-we-do-in-the-shadows.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          What We Do in the Shadows
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-5"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/5"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/fantastic-beasts-the-crimes-of-grindelwald.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Fantastic Beasts: The Crimes of Grindelwald
        </h3>
      </a>
    </article>
  </div>
</section>
`;

exports[`MoviesCatalog correctly renders default markup with more button 1`] = `
<section
  className="catalog"
>
  <h2
    className="catalog__title visually-hidden"
  >
    Catalog
  </h2>
  <ul
    className="catalog__genres-list"
  >
    <li
      className="catalog__genres-item catalog__genres-item--active"
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        All Genres
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Action
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Crime
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Comedy
      </a>
    </li>
    <li
      className="catalog__genres-item "
    >
      <a
        className="catalog__genres-link"
        onClick={[Function]}
      >
        Fantasy
      </a>
    </li>
  </ul>
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/1"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/midnight-special.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Midnight Special
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/2"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/pulp-fiction.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Pulp Fiction
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/3"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/bronson.jpg"
            preload="none"
            src="http://media.xiph.org/mango/tears_of_steel_1080p.webm"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Bronson
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-4"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/4"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/what-we-do-in-the-shadows.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          What We Do in the Shadows
        </h3>
      </a>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      id="movie-5"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="small-movie-card__link"
        href="/film/5"
        onClick={[Function]}
      >
        <div
          className="small-movie-card__image"
        >
          <video
            height={175}
            muted={true}
            onCanPlayThrough={[Function]}
            onEnded={[Function]}
            onLoadStart={[Function]}
            onPause={[Function]}
            onTimeUpdate={[Function]}
            poster="https://es31-server.appspot.com/wtw/static/film/preview/fantastic-beasts-the-crimes-of-grindelwald.jpg"
            preload="none"
            src="http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4"
            width={280}
          />
        </div>
        <h3
          className="small-movie-card__title"
        >
          Fantastic Beasts: The Crimes of Grindelwald
        </h3>
      </a>
    </article>
  </div>
  <div
    className="catalog__more"
  >
    <button
      className="catalog__button"
      onClick={[Function]}
      type="button"
    >
      Show more
    </button>
  </div>
</section>
`;
